# br

./: AAAA  CMakeLists.txt  Cargo.toml  Configure  Devel.xs  Make.inc.in  Makefile  Makefile.PL  Makefile.SH  Makefile.am  Makefile.in  Makefile.pre.in  NEWS  XX  abjad  backward.hpp  bbbbbb  bbk  blobmsg_json.c  build_requirements.txt  config.layout  config.sh  configure  configure.ac  configure.in  feeds.conf.default  ff  go.mod  host-build.mk  jshn.c  lzf.c  mac80211.sh  meson.build  meson.options  php  phpx  pyproject.toml  python  qt  repositories.conf  (+7 more)
24.10.2/: Config.in  Makefile  config.buildinfo
24.10.3/: 0034-libgo-fix-lfs64-use.patch  0037-gcc-go-link-to-libucontext.patch  Config.in  Makefile  common.mk  ext-toolchain.sh  mau
24.10.4/: common.mk
24.10.5/: Makefile
25.12.0/: Config-images.in  Makefile  common.mk  feeds.conf.default
ExampleDriver/: CMakeLists.txt
Modules/: _cursesmodule.c  _hashopenssl.c  _ssl.c  readline.c
aiohttp/: connector.py
audioop/: _audioop.c
buildconfig/: config_unix.py
cmake/: data.cmake
conf/: apache2.conf  exec.cpp  mpidistutils.py
extmod/: extmod.mk
file/: nginx  php.locations  uci.conf.template
giscanner/: ccompiler.py
libgo/: configure  mksysinfo.sh
libmysql/: CMakeLists.txt
mesonbuild/: __init__.py
mesonpy/: __init__.py
packaging/: portmidi.pc.in
python/: CMakeLists.txt
src/: Makefile  encoder.h  libgcrypt.pc.in  main-redir.c  stun.c  zm_db.cpp
src/glsl/: meson.build
src_c/: _pygame.h  imageext.c
test/: Config-images.in
tests/: json_script-example.c
toolkit/: Makefile.am  (+1 more)
(+60 files in other folders)
